# Ansible-Output-Parser

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README  README.rst  SECURITY.md  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: codeql-analysis.yml  pre-commit.yml  pypi.yml  sonar.yml  testing.yml
ansible_parser/: __init__.py  logs.py  play.py  task.py  tasks.py
test/: __init__.py  test_logs.py  test_play.py  test_task.py
test/example_output/: simple.txt
test/test_data/logs/: ansible.txt
test/test_data/playbooks/: failed_with_warning.txt  issue-31.txt  multiple_devices.txt  multiple_playbooks.txt  ok_with_warning.txt  task_with_fatal.txt
test/test_data/tasks/: task_with_command.txt  task_with_debug_msg.txt  task_with_debug_var.txt
