[metadata]
name = ansible-output-parser
version = 0.2.0
author = Peter McDonald
author_email = admin@rockprofile.com
description = Parser for Ansible output
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/RockProfile/Ansible-Output-Parser
project_urls =
    Bug Tracker = https://github.com/RockProfile/Ansible-Output-Parser/issues
    Source = https://github.com/RockProfile/Ansible-Output-Parser
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.9, <3.13

[options.extras_require]
test = black; flake8; isort; mypy; pytest; pytest-cov; twine; wheel;
build = wheel; build;

[flake8]
max_line_length = 120
exclude = venv,.tox

[mypy]
[mypy-setuptools.*]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov --cov-report term-missing
